@startuml

class Artisant{
    nom 
    prénom 
    adresse 
    téléphone 
    mail

}
class Compte {
    user_name
    mot_de_pass 

}
class Client{
    num 
    nom 
    prénom 
    adresse 
    téléphone
    mail
    

}
class Intervention{
    date
    type_intervention
    heures_travaillées
}
class Facture{

}
class Devis{

}

Artisant "1..*" -- "1" Compte
Artisant "0..*" -- "1..*" Client
Intervention "0..*" -- "0..*" Client
(Artisant,Client) .. Facture

@enduml